--- a/index.html
+++ b/index.html
@@ -35,10 +35,8 @@
       </div>
     </div>
   </div>
-  <hr class="space">
   <br>
   <br>
-  <hr class="space">
   <div class="first-content">
   </div>
   <div class="profile">
@@ -66,28 +64,28 @@
   </div>
 </div>
 <div id="wordCarousel">
-  <div class="wordCarousel">
+  <div class="wordCarousel effect721">
       <span>Szükséged van egy </span>
     </div>
-      <div class="wordCarousel-2">
+      <div class="wordCarousel-2 effect721">
           <!-- Use classes 2,3,4, or 5 to match the number of words -->
-          <ul class="flip3">
+          <ul class="flip3 effect721">
               <li>stílusos</li>
               <li>modern</li>
               <li>kreatív</li>
           </ul>
       </div>
-    <div class="wordCarousel-3"><span>weboldalra?</span>
+    <div class="wordCarousel-3 effect721"><span>weboldalra?</span>
   </div>
     </div>
-    <p class="altalanos1"><strong>Ne aggódj! A legjobb helyen jársz, ha:</strong></p>
+    <p class="altalanos1 effect722"><strong>Ne aggódj! A legjobb helyen jársz, ha:</strong></p>
     <div class="canvas">
       <div id="smallsquare">
         <article>
-            <p class="altalanos2"> <i class="fa fa-check" style="font-size:60px;" aria-hidden="true"></i>egyedi logót szeretne,</p>
-            <p class="altalanos2"> <i class="fa fa-check" style="font-size:60px;" aria-hidden="true"></i>nincs még weboldalad,</p>
-            <p class="altalanos2"> <i class="fa fa-check" style="font-size:60px;" aria-hidden="true"></i>vagy a meglévőt lecserélnéd,</p>
-            <p class="altalanos2"> <i class="fa fa-check" style="font-size:60px;" aria-hidden="true"></i>mindezt megfizethető áron.</p>
+            <p class="altalanos2 effect722 effect723"> <i class="fa fa-check" style="font-size:50px;" aria-hidden="true"></i>egyedi logót szeretnél,</p>
+            <p class="altalanos2 effect722 effect723"> <i class="fa fa-check" style="font-size:50px;" aria-hidden="true"></i>nincs még weboldalad,</p>
+            <p class="altalanos2 effect722 effect723"> <i class="fa fa-check" style="font-size:50px;" aria-hidden="true"></i>vagy a meglévőt lecserélnéd,</p>
+            <p class="altalanos2 effect722 effect723"> <i class="fa fa-check" style="font-size:50px;" aria-hidden="true"></i>mindezt megfizethető áron.</p>
         </article>
       </div>
       </div>
@@ -95,29 +93,29 @@
       <div id="flex1">
          <img class="picture" src="assets/logoplan.jpg" alt="logo">
         <article>
-          <h2 id="text">Logó és arculat</h2>
-          <p id="text2">Hogy vállalkozásod egy következő szintre emeld és <strong>profi arculattal</strong> kiemelkedj a többi közül.  </p></article>
+          <h2 class="text effect722">Logó és arculat</h2>
+          <p class="text2 effect721 effect724">Hogy vállalkozásod egy következő szintre emeld és <strong>profi arculattal</strong> kiemelkedj a többi közül.  </p></article>
       </div>
       <div id="flex1">
          <img class="picture" src="assets/design.jpg" alt="design">
         <article>
-          <h2 id="text">Webdesign</h2>
-          <p id="text2">Összhangban a márkád profizmusával, <strong>letisztult</strong> és <strong>modern</strong> megjelenés a weben. </p>
+          <h2 class="text effect722">Webdesign</h2>
+          <p class="text2 effect721 effect724">Összhangban a márkád profizmusával, <strong>letisztult</strong> és <strong>modern</strong> megjelenés a weben. </p>
         </article>
       </div>
       <div id="flex1">
          <img class="picture" src="assets/webdis.jpg" alt="weboldal">
         <article>
-          <h2 id="text">Weboldal készítés</h2>
-          <p id="text2">Webdesign alapján <strong>igényes megjelnés</strong>,amely hűen tükrözi vállalkozásodat.</p>
+          <h2 class="text effect722">Weboldal készítés</h2>
+          <p class="text2 effect721 effect724">Webdesign alapján <strong>igényes megjelnés</strong>,amely hűen tükrözi vállalkozásodat.</p>
         </article>
       </div>
     </div>
 <div class="effect-2">
-  <div class="modern">Ha elnyerte a tetszésed vedd fel velem a</div> 
-  <div class="modern"> 
+  <p class="effect721">Ha elnyerte a tetszésed  vedd fel velem a</p>
+  <div class="modern effect721"> 
     <a href="mailto:szollosigabor@hotmail.com">kapcsolatot.</a>
-  </div>
+  </div> 
   </div>
 </body>
 </html>
