--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </div>
     <div class="content">
      <div class="about">
-       <p>Üdvözlök mindenkit!</p>
+       <h1>Üdvözlök mindenkit!</h1>
        <p>2023 óta foglalkozok weboldalak és logók tervezésével</p>
      </div>
     </div>
@@ -84,8 +84,8 @@
         <article>
             <p class="altalanos2 effect722 effect723"> <i class="fa fa-check" style="font-size:50px;" aria-hidden="true"></i>egyedi logót szeretnél,</p>
             <p class="altalanos2 effect722 effect723"> <i class="fa fa-check" style="font-size:50px;" aria-hidden="true"></i>nincs még weboldalad,</p>
-            <p class="altalanos2 effect722 effect723"> <i class="fa fa-check" style="font-size:50px;" aria-hidden="true"></i>vagy a meglévőt lecserélnéd,</p>
-            <p class="altalanos2 effect722 effect723"> <i class="fa fa-check" style="font-size:50px;" aria-hidden="true"></i>mindezt megfizethető áron.</p>
+            <p class="altalanos2 effect722 effect723"> <i class="fa fa-check" style="font-size:50px;" aria-hidden="true"></i>a meglévőt lecserélnéd,</p>
+            <p class="altalanos2 effect722 effect723"> <i class="fa fa-check" style="font-size:50px;" aria-hidden="true"></i>megfizethető áron.</p>
         </article>
       </div>
       </div>
@@ -107,12 +107,12 @@
          <img class="picture" src="assets/webdis.jpg" alt="weboldal">
         <article>
           <h2 class="text effect722">Weboldal készítés</h2>
-          <p class="text2 effect721 effect724">Webdesign alapján <strong>igényes megjelnés</strong>,amely hűen tükrözi vállalkozásodat.</p>
+          <p class="text2 effect721 effect724">Webdesign alapján <strong>igényes megjelenés</strong>,amely hűen tükrözi vállalkozásodat.</p>
         </article>
       </div>
     </div>
 <div class="effect-2">
-  <p class="effect721">Ha elnyerte a tetszésed  vedd fel velem a</p>
+  <p class="effect721">Ha elnyerte a tetszésed, vedd fel velem a</p>
   <div class="modern effect721"> 
     <a href="mailto:szollosigabor@hotmail.com">kapcsolatot.</a>
   </div> 
