--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
   <link rel="icon" type="image/png" href="favicon/melogo.png">
 </head>
 <body>
+   <!-- Fenti menük -->
+   <!-- Első menü-->
   <div id="big-box">
     <div id="small-box">
       <div class="box left">
         <li class="has-submenu">
-          <a href="">Munkáim</a>
+          <p id="job">Munkáim</p>
             <ul class="submenu">
               <li><a href="works/under-maintenance/under-maintenance.html" target="_blank">Project</a></li>
               <li><a href="works/under-maintenance/under-maintenance.html" target="_blank">Project</a></li>
@@ -27,9 +29,11 @@
             </ul>
           </li>
       </div>
+      <!-- második menü-->
       <div id="second-box" class="box left">
         <ul><li><a href="works/under-maintenance/under-maintenance.html" target="_blank">Árak </a></li></ul>
       </div>
+      <!-- harmadik menü-->
       <div class="box left">
         <ul><li><a href="works/under-maintenance/under-maintenance.html" target="_blank">Megrendelés </a></li></ul>
       </div>
@@ -39,6 +43,7 @@
   <br>
   <div class="first-content">
   </div>
+  <!-- Névjegy-->
   <div class="profile">
   <div class="profile-card">
     <div class="head">
@@ -63,6 +68,7 @@
     </div>
   </div>
 </div>
+<!-- Wordcraousel effect-->
 <div id="wordCarousel">
   <div class="wordCarousel effect721">
       <span>Szükséged van egy </span>
@@ -79,6 +85,7 @@
   </div>
     </div>
     <p class="altalanos1 effect722"><strong>Ne aggódj! A legjobb helyen jársz, ha:</strong></p>
+    <!-- Pipás felsorolás-->
     <div class="canvas">
       <div id="smallsquare">
         <article>
@@ -89,6 +96,7 @@
         </article>
       </div>
       </div>
+      <!-- Flex conténerek-->
     <div class="flex-container">
       <div id="flex1">
          <img class="picture" src="assets/logoplan.jpg" alt="logo">
@@ -111,6 +119,7 @@
         </article>
       </div>
     </div>
+    <!-- legalsó effect-->
 <div class="effect-2">
   <p class="effect721">Ha elnyerte a tetszésed, vedd fel velem a</p>
   <div class="modern effect721"> 
