--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    <!-- Első menü-->
   <div id="big-box">
     <div id="small-box">
-      <div class="box left">
+      <menu class="box left">
         <li class="has-submenu">
           <p id="job">Munkáim</p>
             <ul class="submenu">
@@ -28,7 +28,7 @@
               <li><a href="works/under-maintenance/under-maintenance.html" target="_blank">Project</a></li>
             </ul>
           </li>
-      </div>
+        </menu>
       <!-- második menü-->
       <div id="second-box" class="box left">
         <ul><li><a href="works/under-maintenance/under-maintenance.html" target="_blank">Árak </a></li></ul>
@@ -88,30 +88,29 @@
     <!-- Pipás felsorolás-->
     <div class="canvas">
       <div id="smallsquare">
-        <article>
             <p class="altalanos2 effect722 effect723"> <i class="fa fa-check" style="font-size:50px;" aria-hidden="true"></i>egyedi logót szeretnél,</p>
             <p class="altalanos2 effect722 effect723"> <i class="fa fa-check" style="font-size:50px;" aria-hidden="true"></i>nincs még weboldalad,</p>
             <p class="altalanos2 effect722 effect723"> <i class="fa fa-check" style="font-size:50px;" aria-hidden="true"></i>a meglévőt lecserélnéd,</p>
             <p class="altalanos2 effect722 effect723"> <i class="fa fa-check" style="font-size:50px;" aria-hidden="true"></i>megfizethető áron.</p>
-        </article>
       </div>
       </div>
       <!-- Flex conténerek-->
     <div class="flex-container">
-      <div id="flex1">
+      <div class="flex1">
          <img class="picture" src="assets/logoplan.jpg" alt="logo">
         <article>
           <h2 class="text effect722">Logó és arculat</h2>
-          <p class="text2 effect721 effect724">Hogy vállalkozásod egy következő szintre emeld és <strong>profi arculattal</strong> kiemelkedj a többi közül.  </p></article>
-      </div>
-      <div id="flex1">
+          <p class="text2 effect721 effect724">Hogy vállalkozásod egy következő szintre emeld és <strong>profi arculattal</strong> kiemelkedj a többi közül.  </p>
+        </article>
+        </div>
+      <div class="flex1">
          <img class="picture" src="assets/design.jpg" alt="design">
         <article>
           <h2 class="text effect722">Webdesign</h2>
           <p class="text2 effect721 effect724">Összhangban a márkád profizmusával, <strong>letisztult</strong> és <strong>modern</strong> megjelenés a weben. </p>
         </article>
       </div>
-      <div id="flex1">
+      <div class="flex1">
          <img class="picture" src="assets/webdis.jpg" alt="weboldal">
         <article>
           <h2 class="text effect722">Weboldal készítés</h2>
