--- a/index.html
+++ b/index.html
@@ -6,26 +6,29 @@
   <link rel="stylesheet" type="text/css" href="reset.css">
   <link rel="stylesheet" type="text/css" href="style.css">
   <title>Szőllősi Gábor</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Open+Sans&display=swap" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <link rel="icon" type="image/png" href="favicon/melogo.png">
 </head>
 <body>
-   <!-- Fenti menük -->
+ <!-- Fenti menük -->
    <!-- Első menü-->
-  <div id="big-box">
+   <div id="big-box">
     <div id="small-box">
       <menu class="box left">
         <li class="has-submenu">
           <p id="job">Munkáim</p>
             <ul class="submenu">
-              <li><a href="works/under-maintenance/under-maintenance.html" target="_blank">Project</a></li>
-              <li><a href="works/under-maintenance/under-maintenance.html" target="_blank">Project</a></li>
-              <li><a href="works/under-maintenance/under-maintenance.html" target="_blank">Project</a></li>
-              <li><a href="works/under-maintenance/under-maintenance.html" target="_blank">Project</a></li>
-              <li><a href="works/under-maintenance/under-maintenance.html" target="_blank">Project</a></li>
-              <li><a href="works/under-maintenance/under-maintenance.html" target="_blank">Project</a></li>
-              <li><a href="works/under-maintenance/under-maintenance.html" target="_blank">Project</a></li>
-              <li><a href="works/under-maintenance/under-maintenance.html" target="_blank">Project</a></li>
+              <li class="my-jobs"><a href="works/under-maintenance/under-maintenance.html" target="_blank">Project</a></li>
+              <li class="my-jobs"><a href="works/under-maintenance/under-maintenance.html" target="_blank">Project</a></li>
+              <li class="my-jobs"><a href="works/under-maintenance/under-maintenance.html" target="_blank">Project</a></li>
+              <li class="my-jobs"><a href="works/under-maintenance/under-maintenance.html" target="_blank">Project</a></li>
+              <li class="my-jobs"><a href="works/under-maintenance/under-maintenance.html" target="_blank">Project</a></li>
+              <li class="my-jobs"><a href="works/under-maintenance/under-maintenance.html" target="_blank">Project</a></li>
+              <li class="my-jobs"><a href="works/under-maintenance/under-maintenance.html" target="_blank">Project</a></li>
+              <li class="my-jobs"><a href="works/under-maintenance/under-maintenance.html" target="_blank">Project</a></li>
             </ul>
           </li>
         </menu>
@@ -45,30 +48,30 @@
   </div>
   <!-- Névjegy-->
   <div class="profile">
-  <div class="profile-card">
-    <div class="head">
-      <div class="profile-image">
-        <img id="profile-image" src="assets/me.jpg" alt="Szőllősi Gábor">
-      </div>
-      <div class="name-headline">
-        <p id="effect">
-          Website designer
-  <span>
-    Szőllősi Gábor
-  </span>
-  &mdash;<i class="fa fa-map-marker"></i> Kazincbarcika, HU &mdash;
-</p>
+    <div class="profile-card">
+      <div class="head">
+        <div class="profile-image">
+          <img id="profile-image" src="assets/me.jpg" alt="Szőllősi Gábor">
         </div>
-    </div>
-    <div class="content">
-     <div class="about">
-       <h1>Üdvözlök mindenkit!</h1>
-       <p>2023 óta foglalkozok weboldalak és logók tervezésével</p>
-     </div>
+        <div class="name-headline">
+          <p id="effect">
+            Website designer
+    <span>
+      Szőllősi Gábor
+    </span>
+    <i class="fa fa-map-marker"></i>Kazincbarcika,HU
+  </p>
+          </div>
+      </div>
+      <div class="content">
+       <div class="about">
+         <h1>Üdvözlök mindenkit!</h1>
+         <p>2023 óta foglalkozok weboldalak és logók tervezésével</p>
+       </div>
+      </div>
     </div>
   </div>
-</div>
-<!-- Wordcraousel effect-->
+  <!-- Wordcraousel effect-->
 <div id="wordCarousel">
   <div class="wordCarousel effect721">
       <span>Szükséged van egy </span>
@@ -85,46 +88,45 @@
   </div>
     </div>
     <p class="altalanos1 effect722"><strong>Ne aggódj! A legjobb helyen jársz, ha:</strong></p>
-    <!-- Pipás felsorolás-->
-    <div class="canvas">
-      <div id="smallsquare">
-            <p class="altalanos2 effect722 effect723"> <i class="fa fa-check" style="font-size:50px;" aria-hidden="true"></i>egyedi logót szeretnél,</p>
-            <p class="altalanos2 effect722 effect723"> <i class="fa fa-check" style="font-size:50px;" aria-hidden="true"></i>nincs még weboldalad,</p>
-            <p class="altalanos2 effect722 effect723"> <i class="fa fa-check" style="font-size:50px;" aria-hidden="true"></i>a meglévőt lecserélnéd,</p>
-            <p class="altalanos2 effect722 effect723"> <i class="fa fa-check" style="font-size:50px;" aria-hidden="true"></i>megfizethető áron.</p>
-      </div>
-      </div>
-      <!-- Flex conténerek-->
-    <div class="flex-container">
-      <div class="flex1">
-         <img class="picture" src="assets/logoplan.jpg" alt="logo">
-        <article>
-          <h2 class="text effect722">Logó és arculat</h2>
-          <p class="text2 effect721 effect724">Hogy vállalkozásod egy következő szintre emeld és <strong>profi arculattal</strong> kiemelkedj a többi közül.  </p>
-        </article>
-        </div>
-      <div class="flex1">
-         <img class="picture" src="assets/design.jpg" alt="design">
-        <article>
-          <h2 class="text effect722">Webdesign</h2>
-          <p class="text2 effect721 effect724">Összhangban a márkád profizmusával, <strong>letisztult</strong> és <strong>modern</strong> megjelenés a weben. </p>
-        </article>
-      </div>
-      <div class="flex1">
-         <img class="picture" src="assets/webdis.jpg" alt="weboldal">
-        <article>
-          <h2 class="text effect722">Weboldal készítés</h2>
-          <p class="text2 effect721 effect724">Webdesign alapján <strong>igényes megjelenés</strong>,amely hűen tükrözi vállalkozásodat.</p>
-        </article>
-      </div>
+ <!-- Pipás felsorolás-->
+ <div class="canvas">
+  <div id="smallsquare">
+        <p class="altalanos2 effect722 effect723"> <i class="fa fa-check" style="font-size:50px;" aria-hidden="true"></i>egyedi logót szeretnél,</p>
+        <p class="altalanos2 effect722 effect723"> <i class="fa fa-check" style="font-size:50px;" aria-hidden="true"></i>nincs még weboldalad,</p>
+        <p class="altalanos2 effect722 effect723"> <i class="fa fa-check" style="font-size:50px;" aria-hidden="true"></i>a meglévőt lecserélnéd,</p>
+        <p class="altalanos2 effect722 effect723"> <i class="fa fa-check" style="font-size:50px;" aria-hidden="true"></i>megfizethető áron.</p>
+  </div>
+  </div>
+  <!-- Flex conténerek-->
+<div class="flex-container">
+  <div class="flex1">
+     <img class="picture" src="assets/logoplan.jpg" alt="logo">
+    <article>
+      <h2 class="text effect722">Logó és arculat</h2>
+      <p class="text2 effect721 effect724">Hogy vállalkozásod egy következő szintre emeld és <strong>profi arculattal</strong> kiemelkedj a többi közül.  </p>
+    </article>
     </div>
-    <!-- legalsó effect-->
+  <div class="flex1">
+     <img class="picture" src="assets/design.jpg" alt="design">
+    <article>
+      <h2 class="text effect722">Webdesign</h2>
+      <p class="text2 effect721 effect724">Összhangban a márkád profizmusával, <strong>letisztult</strong> és <strong>modern</strong> megjelenés a weben. </p>
+    </article>
+  </div>
+  <div class="flex1">
+     <img class="picture" src="assets/webdis.jpg" alt="weboldal">
+    <article>
+      <h2 class="text effect722">Weboldal készítés</h2>
+      <p class="text2 effect721 effect724">Webdesign alapján <strong>igényes megjelenés</strong>,amely hűen tükrözi vállalkozásodat.</p>
+    </article>
+  </div>
+</div>
+<!-- legalsó effect-->
 <div class="effect-2">
-  <p class="effect721">Ha elnyerte a tetszésed, vedd fel velem a</p>
+  <p class="effect721">Ha megtetszett, vedd fel a</p>
   <div class="modern effect721"> 
     <a href="mailto:szollosigabor@hotmail.com">kapcsolatot.</a>
   </div> 
   </div>
-</body>
+  </body>
 </html>
-
